added animated background to about me sec

--- a/index.html
+++ b/index.html
@@ -49,10 +49,25 @@
   </header>
   <main>
     <section id="about" class="about-me">
+      <div class="area">
+        <ul class="circles">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
       <div class="about-wrapper">
         <h1>About me</h1>
         <summary>
-          🔓Thank you for visiting HalaSalhab's portfolio. She is a passionate, motivated, ambitious software engineer who
+          🔓Thank you for visiting HalaSalhab's portfolio. She is a passionate, motivated, ambitious software engineer
+          who
           loves solving problems. With a strong background in JavaScript and C++, Hala is eager to launch her career as
           a junior software engineer.
           <br>
