added about-section, no responise or font sizes added yet

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <nav class="navigation">
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a>Experience</a></li>
+        <li><a>Projects</a></li>
         <li><a href="#header"><i class="fa-solid fa-house"></i></a></li>
-        <li>Projects</li>
+        <li>Skills</li>
         <li>Contact</li>
       </ul>
     </nav>
@@ -74,7 +74,7 @@
           👨‍💻Hala is a dedicated computer science student who always stays up-to-date with the latest industry trends
           and technologies. She has experience working with HTML, CSS, JavaScript, C++, SQL, and the MERN stack(MongoDB,
           Express.js, React, Node.js). Her GitHub portfolio showcases her projects and code samples and can be viewed
-          here:<a href="https://github.com/Halasalhab" target="_blank">https://github.com/Halasalhab</a>
+          here:<a href="https://github.com/Halasalhab" target="_blank" class="link-decorated">https://github.com/Halasalhab</a>
           <br>
           📍As a proven team player with excellent communication skills, Hala thrives in collaborative environments. She
           actively seeks opportunities to contribute her technical expertise and collaborate with innovative teams to
