--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navigation">
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a>Projects</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#header"><i class="fa-solid fa-house"></i></a></li>
         <li>Skills</li>
         <li>Contact</li>
@@ -74,7 +74,8 @@
           👨‍💻Hala is a dedicated computer science student who always stays up-to-date with the latest industry trends
           and technologies. She has experience working with HTML, CSS, JavaScript, C++, SQL, and the MERN stack(MongoDB,
           Express.js, React, Node.js). Her GitHub portfolio showcases her projects and code samples and can be viewed
-          here:<a href="https://github.com/Halasalhab" target="_blank" class="link-decorated">https://github.com/Halasalhab</a>
+          here:<a href="https://github.com/Halasalhab" target="_blank"
+            class="link-decorated">https://github.com/Halasalhab</a>
           <br>
           📍As a proven team player with excellent communication skills, Hala thrives in collaborative environments. She
           actively seeks opportunities to contribute her technical expertise and collaborate with innovative teams to
@@ -92,6 +93,60 @@
           <a href="./Assets/HalaSalhabRes.pdf" class="btn-download" download><i class="fa fa-download"></i> Download My
             CV</a>
         </div>
+      </div>
+    </section>
+    <section id="projects" class="projects">
+      <div class="container">
+        <div class="project-details">
+          <h1>Web Topics</h1>
+          <span class="role">Frontend Developer</span>
+          <p class="information">A web application that enables users to search, sort, and filter web courses. It
+            provides course details, allows saving for later, and supports dark/light mode.</p>
+          <div class="control">
+            <button class="btn">
+              <span class="code">code</span>
+              <span class="github-icon"><i class="fa-brands fa-square-github" aria-hidden="true"></i></span>
+              <span class="github-repo-link">Take a look</span>
+            </button>
+          </div>
+        </div>
+        <div class="project-image">
+          <img src="./Assets/home.jpeg" alt="Web Topics Home page image">
+          <div class="info">
+            <h2>Tech Stack</h2>
+            <ul>
+              <li>ReactJs</li>
+              <li>BootStrap</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="container align-flex-end">
+        <div class="project-details">
+          <h1>Web Topics</h1>
+          <span class="role">Frontend Developer</span>
+          <p class="information">A web application that enables users to search, sort, and filter web courses. It
+            provides course details, allows saving for later, and supports dark/light mode.</p>
+          <div class="control">
+            <button class="btn">
+              <span class="code">code</span>
+              <span class="github-icon"><i class="fa-brands fa-square-github" aria-hidden="true"></i></span>
+              <span class="github-repo-link">Take a look</span>
+            </button>
+          </div>
+        </div>
+        <div class="project-image">
+          <img src="./Assets/home.jpeg" alt="Web Topics Home page image">
+          <div class="info">
+            <h2>Tech Stack</h2>
+            <ul>
+              <li>ReactJs</li>
+              <li>BootStrap</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       </div>
     </section>
   </main>
