updated few classes names and added aria labels for icons

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <aside class="social-media">
     <ul>
       <li><a class="icon-text-wraper" href="https://www.linkedin.com/in/hala-salhab/" target="_blank"><i
-            class="social-icon fa-brands fa-linkedin"></i>LinkedIn</a></li>
+            class="social-icon fa-brands fa-linkedin" aria-label="linkedin-icon"></i>LinkedIn</a></li>
       <li><a class="icon-text-wraper" href="https://github.com/Halasalhab" target="_blank"><i
-            class="social-icon fa-brands fa-square-github"></i>GitHub</a></li>
+            class="social-icon fa-brands fa-square-github" aria-label="github-icon"></i>GitHub</a></li>
       <li><a class="icon-text-wraper" href="https://leetcode.com/halasalhab0/" target="_blank"><img
-            src="./Assets/leetcode-icon.svg" alt="leetcode-icon" class="social-icon-svg" />LeetCode</a></li>
+            src="./Assets/leetcode-icon.svg" alt="leetcode-icon" class="social-icon-svg" aria-label="leetcode-icon"/>LeetCode</a></li>
     </ul>
   </aside>
   <header id="header">
@@ -29,7 +29,7 @@
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#header"><i class="fa-solid fa-house"></i></a></li>
+        <li><a href="#header"><i class="fa-solid fa-house" aria-label="home-icon"></i></a></li>
         <li>Skills</li>
         <li>Contact</li>
       </ul>
@@ -42,7 +42,7 @@
           perferendis ex fugiat sapiente animi minus sint in dicta, aliquid impedit tenetur est error.
         </p>
       </div>
-      <div class="introduction-img">
+      <div class="profile-img-container">
         <img src="./Assets/Hala Salhab Pro Img.png" alt='hala' class="profile-img" />
       </div>
     </section>
@@ -90,7 +90,7 @@
           opportunities in the field. Let's make a positive impact together!
         </summary>
         <div class="btn-container">
-          <a href="./Assets/HalaSalhabRes.pdf" class="btn-download" download><i class="fa fa-download"></i> Download My
+          <a href="./Assets/HalaSalhabRes.pdf" class="btn-download" download><i class="fa fa-download" aria-label="download-icon"></i> Download My
             CV</a>
         </div>
       </div>
@@ -105,7 +105,7 @@
           <div class="control">
             <button class="btn">
               <span class="code">code</span>
-              <span class="github-icon"><i class="fa-brands fa-square-github" aria-hidden="true"></i></span>
+              <span class="github-icon"><i class="fa-brands fa-square-github" aria-label="github-icon"></i></span>
               <span class="github-repo-link">Take a look</span>
             </button>
           </div>
@@ -131,7 +131,7 @@
           <div class="control">
             <button class="btn">
               <span class="code">code</span>
-              <span class="github-icon"><i class="fa-brands fa-square-github" aria-hidden="true"></i></span>
+              <span class="github-icon"><i class="fa-brands fa-square-github" aria-label="github-icon"></i></span>
               <span class="github-repo-link">Take a look</span>
             </button>
           </div>
