moving to do the skills section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <li><a class="icon-text-wraper" href="https://github.com/Halasalhab" target="_blank"><i
             class="social-icon fa-brands fa-square-github" aria-label="github-icon"></i>GitHub</a></li>
       <li><a class="icon-text-wraper" href="https://leetcode.com/halasalhab0/" target="_blank"><img
-            src="./Assets/leetcode-icon.svg" alt="leetcode-icon" class="social-icon-svg" aria-label="leetcode-icon"/>LeetCode</a></li>
+            src="./Assets/leetcode-icon.svg" alt="leetcode-icon" class="social-icon-svg"
+            aria-label="leetcode-icon" />LeetCode</a></li>
     </ul>
   </aside>
   <header id="header">
@@ -38,8 +39,8 @@
       <div class="introduction-text">
         <h1 class="typed-out">I'm Hala Salhab</h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ab sit, unde et eligendi consequuntur fugit
-          perferendis ex fugiat sapiente animi minus sint in dicta, aliquid impedit tenetur est error.
+          A passionate and dedicated junior software developer with a strong programming foundation and a drive for
+          crafting efficient, elegant, and user-centric software solutions.
         </p>
       </div>
       <div class="profile-img-container">
@@ -90,7 +91,8 @@
           opportunities in the field. Let's make a positive impact together!
         </summary>
         <div class="btn-container">
-          <a href="./Assets/HalaSalhabRes.pdf" class="btn-download" download><i class="fa fa-download" aria-label="download-icon"></i> Download My
+          <a href="./Assets/HalaSalhabRes.pdf" class="btn-download" download><i class="fa fa-download"
+              aria-label="download-icon"></i> Download My
             CV</a>
         </div>
       </div>
