added responsive to introduction

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Handjet:wght@300;400;500&family=Nunito+Sans:wght@200;400;700&family=Open+Sans:ital,wght@0,400;0,500;1,500&display=swap&family=JetBrains+Mono:wght@200;400;500&family=Nunito+Sans:wght@200;400;700&family=Open+Sans:ital,wght@0,400;0,500;1,500&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Handjet:wght@300;400;500;700&family=Nunito+Sans:wght@200;400;700&family=Open+Sans:ital,wght@0,400;0,500;1,500&display=swap&family=JetBrains+Mono:wght@200;400;500&family=Nunito+Sans:wght@200;400;700&family=Open+Sans:ital,wght@0,400;0,500;1,500&display=swap"
     rel="stylesheet" />
 </head>
 
@@ -25,30 +25,28 @@
     </ul>
   </aside>
   <header id="header">
-    <nav class="navigation">
+    <nav class="navigation" id="navigation">
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
         <li><a href="#header"><i class="fa-solid fa-house" aria-label="home-icon"></i></a></li>
-        <li>Skills</li>
-        <li>Contact</li>
+        <li><a href="#projects">Projects</a></li>
+        <!-- <li>Skills</li>
+        <li>Contact</li> -->
       </ul>
     </nav>
     <section class="introduction">
       <div class="introduction-text">
         <h1 class="typed-out">I'm Hala Salhab</h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ab sit, unde et eligendi consequuntur fugit
-          perferendis ex fugiat sapiente animi minus sint in dicta, aliquid impedit tenetur est error.
+          A passionate and dedicated junior software developer with a strong programming foundation and a drive for crafting efficient, elegant, and user-centric software solutions.
         </p>
       </div>
       <div class="profile-img-container">
-        <img src="./Assets/Hala Salhab Pro Img.png" alt='hala' class="profile-img" />
       </div>
     </section>
   </header>
   <main>
-    <section id="about" class="about-me">
+    <!-- <section id="about" class="about-me">
       <div class="area">
         <ul class="circles">
           <li></li>
@@ -94,8 +92,8 @@
             CV</a>
         </div>
       </div>
-    </section>
-    <section id="projects" class="projects">
+    </section> -->
+    <!-- <section id="projects" class="projects">
       <div class="container">
         <div class="project-details">
           <h1>Web Topics</h1>
@@ -148,7 +146,7 @@
         </div>
       </div>
       </div>
-    </section>
+    </section> -->
   </main>
 </body>
 <script src="index.js"></script>
