fixed classes names and typos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </ul>
       </div>
       <div class="about-wrapper">
-        <h1>About me</h1>
+        <h2>About me</h2>
         <summary>
           🔓Thank you for visiting HalaSalhab's portfolio. She is a passionate, motivated, ambitious software engineer
           who
@@ -94,10 +94,10 @@
       </div>
     </section> -->
     <!-- <section id="projects" class="projects">
-      <div class="container">
+      <div class="project-card">
         <div class="project-details">
-          <h1>Web Topics</h1>
-          <span class="role">Frontend Developer</span>
+          <h3>Web Topics</h3>
+          <span class="role">Frontend Development</span>
           <p class="information">A web application that enables users to search, sort, and filter web courses. It
             provides course details, allows saving for later, and supports dark/light mode.</p>
           <div class="control">
@@ -120,10 +120,10 @@
         </div>
       </div>
       </div>
-      <div class="container align-flex-end">
+      <div class="project-card align-flex-end">
         <div class="project-details">
-          <h1>Web Topics</h1>
-          <span class="role">Frontend Developer</span>
+          <h3>Web Topics</h3>
+          <span class="role">Frontend Development</span>
           <p class="information">A web application that enables users to search, sort, and filter web courses. It
             provides course details, allows saving for later, and supports dark/light mode.</p>
           <div class="control">
