added reponsive to project section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             class="social-icon fa-brands fa-linkedin" aria-label="linkedin-icon"></i>LinkedIn</a></li>
       <li><a class="icon-text-wraper" href="https://github.com/Halasalhab" target="_blank"><i
             class="social-icon fa-brands fa-square-github" aria-label="github-icon"></i>GitHub</a></li>
-      <li><a class="icon-text-wraper" href="https://leetcode.com/halasalhab0/" target="_blank"><i class="social-icon fa-solid fa-envelope" id="email-to"  aria-label="email-icon"></i>Gmail</a></li>
+      <li><a class="icon-text-wraper" href="https://leetcode.com/halasalhab0/" target="_blank"><i
+            class="social-icon fa-solid fa-envelope" id="email-to" aria-label="email-icon"></i>Gmail</a></li>
     </ul>
   </aside>
   <header id="header">
@@ -81,6 +82,63 @@
               aria-label="download-icon"></i> Download My
             CV</a>
         </div>
+      </div>
+    </section>
+    <section id="projects" class="projects">
+      <h2 class="section-heading">Projects</h2>
+      <div class="projects-container">
+        <div class="project-card">
+          <div class="project-details">
+            <h3>Web Topics</h3>
+            <span class="role">Frontend Development</span>
+            <p class="information">A web application that enables users to search, sort, and filter web courses. It
+              provides course details, allows saving for later, and supports dark/light mode.</p>
+            <div class="control">
+              <button class="btn">
+                <span class="code">code</span>
+                <span class="github-icon"><i class="fa-brands fa-square-github" aria-label="github-icon"></i></span>
+                <span class="github-repo-link">Take a look</span>
+              </button>
+            </div>
+          </div>
+          <div class="project-image">
+            <img src="./Assets/home.jpeg" alt="Web Topics Home page image">
+            <div class="info">
+              <h4>Tech Stack</h4>
+              <ul>
+                <li>ReactJs</li>
+                <li>BootStrap</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="project-card align-self">
+          <div class="project-details">
+            <h3>Web Topics</h3>
+            <span class="role">Frontend Development</span>
+            <p class="information">A web application that enables users to search, sort, and filter web courses. It
+              provides course details, allows saving for later, and supports dark/light mode.</p>
+            <div class="control">
+              <button class="btn">
+                <span class="code">code</span>
+                <span class="github-icon"><a href="https://github.com/JSD-0423/Hala-Salhab-Project1" target="_blank"><i class="fa-brands fa-square-github" aria-label="github-icon"></i></span>
+                <span class="github-repo-link">Take a look</span></a>
+              </button>
+            </div>
+          </div>
+          <div class="project-image">
+            <img src="./Assets/home.jpeg" alt="Web Topics Home page image">
+            <div class="info">
+              <h4>Tech Stack</h4>
+              <ul>
+                <li>ReactJs</li>
+                <li>BootStrap</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
       </div>
     </section>
   </main>
