--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
         <summary>
           <p>
             My journey began at 14 when I discovered the magic of Google Console and played with HTML elements.
-            Programming instantly captured my heart, fueled by the joy of automating tasks and solving challenges
-            through code.
+            Programming instantly captured my heart, fueled by the joy of <strong>automating tasks and solving challenges
+            through code</strong>.
           </p>
           <p>Since then, my days have been dedicated to learning, practicing, and pushing boundaries. I've curated a
-            diverse skill set, including HTML, CSS, JavaScript, C++, SQL, and the MERN stack. As a passionate computer
+            diverse skill set, including <strong>HTML, CSS, JavaScript, C++, SQL, and the MERN stack</strong>. As a passionate computer
             science enthusiast, I've actively participated in and organized tech workshops, honing my leadership skills.
           </p>
           <p>Today, I stand as a passionate, problem-solving software engineer with a solid background in JavaScript and
             C++, ready to embark on my journey as a junior software engineer. With a knack for staying ahead of industry
-            trends, I thrive in collaborative environments and eagerly seek opportunities to contribute my technical
-            prowess. Let's connect and make a positive impact together!</p>
+            trends,<strong>I thrive in collaborative environments and eagerly seek opportunities to contribute my technical
+            prowess</strong>. Let's connect and make a positive impact together!</p>
         </summary>
         <div class="btn-container">
           <a href="./Assets/HalaSalhabRes.pdf" class="btn-download" download><i class="fa fa-download"
@@ -121,7 +121,8 @@
             <div class="control">
               <button class="btn">
                 <span class="code">code</span>
-                <span class="github-icon"><a href="https://github.com/JSD-0423/Hala-Salhab-Project1" target="_blank"><i class="fa-brands fa-square-github" aria-label="github-icon"></i></span>
+                <span class="github-icon"><a href="https://github.com/JSD-0423/Hala-Salhab-Project1" target="_blank"><i
+                      class="fa-brands fa-square-github" aria-label="github-icon"></i></span>
                 <span class="github-repo-link">Take a look</span></a>
               </button>
             </div>
@@ -142,6 +143,17 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <ul class="social-links-footer">
+      <li><a class="icon-text-wraper" href="https://www.linkedin.com/in/hala-salhab/" target="_blank"><i
+            class="social-icon fa-brands fa-linkedin" aria-label="linkedin-icon"></i></a></li>
+      <li><a class="icon-text-wraper" href="https://github.com/Halasalhab" target="_blank"><i
+            class="social-icon fa-brands fa-square-github" aria-label="github-icon"></i></a></li>
+      <li><a class="icon-text-wraper" href="https://leetcode.com/halasalhab0/" target="_blank"><i
+            class="social-icon fa-solid fa-envelope" id="email-to" aria-label="email-icon"></i></a></li>
+    </ul>
+    <p>Made with <i class="footer-icon fa-solid fa-heart"></i> by the one & only <strong>Hala Salhab</strong></p>
+  </footer>
 </body>
 <script src="index.js"></script>
 <script src="https://kit.fontawesome.com/c819c0ef25.js" crossorigin="anonymous"></script>
