added coral project

--- a/index.html
+++ b/index.html
@@ -65,17 +65,20 @@
         <summary>
           <p>
             My journey began at 14 when I discovered the magic of Google Console and played with HTML elements.
-            Programming instantly captured my heart, fueled by the joy of <strong>automating tasks and solving challenges
-            through code</strong>.
+            Programming instantly captured my heart, fueled by the joy of <strong>automating tasks and solving
+              challenges
+              through code</strong>.
           </p>
           <p>Since then, my days have been dedicated to learning, practicing, and pushing boundaries. I've curated a
-            diverse skill set, including <strong>HTML, CSS, JavaScript, C++, SQL, and the MERN stack</strong>. As a passionate computer
+            diverse skill set, including <strong>HTML, CSS, JavaScript, C++, SQL, and the MERN stack</strong>. As a
+            passionate computer
             science enthusiast, I've actively participated in and organized tech workshops, honing my leadership skills.
           </p>
           <p>Today, I stand as a passionate, problem-solving software engineer with a solid background in JavaScript and
             C++, ready to embark on my journey as a junior software engineer. With a knack for staying ahead of industry
-            trends,<strong>I thrive in collaborative environments and eagerly seek opportunities to contribute my technical
-            prowess</strong>. Let's connect and make a positive impact together!</p>
+            trends,<strong>I thrive in collaborative environments and eagerly seek opportunities to contribute my
+              technical
+              prowess</strong>. Let's connect and make a positive impact together!</p>
         </summary>
         <div class="btn-container">
           <a href="./Assets/HalaSalhabRes.pdf" class="btn-download" download><i class="fa fa-download"
@@ -89,25 +92,26 @@
       <div class="projects-container">
         <div class="project-card">
           <div class="project-details">
-            <h3>Web Topics</h3>
+            <h3>CORA'L</h3>
             <span class="role">Frontend Development</span>
-            <p class="information">A web application that enables users to search, sort, and filter web courses. It
-              provides course details, allows saving for later, and supports dark/light mode.</p>
+            <p class="information">A PWA e-commerce web application for a general store that sells a multitude of
+              things, like women’s wear, men’s wear, accessories, makeup, bags, etc.</p>
             <div class="control">
               <button class="btn">
                 <span class="code">code</span>
-                <span class="github-icon"><i class="fa-brands fa-square-github" aria-label="github-icon"></i></span>
-                <span class="github-repo-link">Take a look</span>
+                <span class="github-icon"><a href="https://github.com/JSD-0423/frontend-final-3" target="_blank"><i
+                      class="fa-brands fa-square-github" aria-label="github-icon"></a></i></span>
+                <a href="https://coral-team-3.netlify.app/" target="_blank"><span class="github-repo-link">Take a look</span></a>
               </button>
             </div>
           </div>
           <div class="project-image">
-            <img src="./Assets/home.jpeg" alt="Web Topics Home page image">
+            <img src="./Assets/CORAL.png" alt="Web Topics Home page image">
             <div class="info">
               <h4>Tech Stack</h4>
               <ul>
                 <li>ReactJs</li>
-                <li>BootStrap</li>
+                <li>Material UI</li>
               </ul>
             </div>
           </div>
